VueClasse fonctionne !